[gd_scene format=3 uid="uid://bhnpe44owliji"]

[ext_resource type="Script" uid="uid://dfe448ktkayal" path="res://scripts/sign.gd" id="1_1rpqm"]
[ext_resource type="Texture2D" uid="uid://b7rpdvq4u5fse" path="res://assets/Mini FX, Items & UI/Mini UI/Speech_Emotes (16 x 16).png" id="1_svbwx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1rpqm"]
size = Vector2(32, 16)

[node name="Sign" type="Node2D" unique_id=788242226]
script = ExtResource("1_1rpqm")

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=1665358468]
visible = false
position = Vector2(0, -16)
texture = ExtResource("1_svbwx")
region_enabled = true
region_rect = Rect2(0, 0, 16, 16)

[node name="SignArea" type="Area2D" parent="." unique_id=323873067]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="SignArea" unique_id=734633091]
shape = SubResource("RectangleShape2D_1rpqm")

[connection signal="body_entered" from="SignArea" to="." method="_on_sign_area_body_entered"]
[connection signal="body_exited" from="SignArea" to="." method="_on_sign_area_body_exited"]
